# mayday-health-forecast

./: .gitignore  installed_packages.txt  pyproject.toml
configs/: config.yaml
data/metadata/: nigeria_states.csv  state_coordinates.csv  states.csv
data/processed/: modeling_dataset_v3.csv
data/raw/: lassa_fever_timeseries_full.csv  lassa_fever_timeseries_minimal.csv
scripts/: quality_gate.ps1
src/mayday/: cli.py
src/mayday/core/: config.py  exceptions.py  logger.py  paths.py  settings.py
src/mayday/datasets/: artifacts.py  io.py  validator.py  versioning.py
tests/integration/: test_feature_builder_integration.py  test_nasa_download.py  test_nasa_pipeline.py  test_preprocessing_workflow.py
tests/unit/: test_base_datasource.py  test_base_model.py  test_config.py  test_dataset_io.py  test_discovery.py  test_downloader.py  test_environmental.py  test_environmental_features.py  test_epidemiology.py  test_exceptions.py  test_feature_base.py  test_feature_pipeline.py  test_feature_selector.py  test_geography.py  test_geography_loader.py  test_http.py  test_json_to_dataframe.py  test_kaggle.py  test_kaggle_download.py  test_lags.py  test_lightgbm_model.py  test_logger.py  test_merge.py  test_metadata.py  test_metrics.py  test_model_pipeline.py  test_nasa.py  test_nasa_client.py  test_nasa_client_params.py  test_paths.py  test_pipeline.py  test_preprocessing_io.py  test_preprocessing_pipeline.py  test_rolling.py  test_seasonal.py  test_settings.py  test_splitter.py  test_temporal.py  test_training_datasets.py  test_training_pipeline.py  (+1 more)
(+40 files in other folders)
