[project]
name = "mayday-health-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "kaggle>=2.2.3",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "prophet>=1.3.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
    "typer>=0.26.8",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = ["black>=26.5.1", "pyright>=1.1.411", "pytest>=9.1.1", "ruff>=0.15.20"]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mayday"]

[tool.black]
line-length = 88
target-version = ["py313"]
